# kintsugi-bms

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak  README.md  bms_README.md  build.sh  build_status.txt  requirements.txt  verify.sh  verify_memmanage_protection.py
bms_measurement_results/: bms_latency.csv  bms_latency_resampled_raw.csv  collect_bms_latency.py  plot_bms_uart_timeline_matplotlib.py  plot_uart_attack_heatmap.py  plot_uart_attack_summary.py  plot_uart_attack_timeline.py  uart_attack_heatmap.csv  uart_attack_summary.csv  uart_attack_timeline_overflow_blocked.csv  uart_attack_timeline_overflow_comm.csv  uart_attack_timeline_overflow_est.csv  uart_attack_timeline_overflow_meta.tex  uart_attack_timeline_overflow_mon.csv  uart_attack_timeline_overflow_rx.csv
bms_threads_scripts/: attack_calibration.sh  attack_replay.sh  attack_state_forging.sh  attack_threshold.sh  collect_uart_attack_phase.sh  send_bms_uart_attack.py
evaluation_scripts/: README.md  context-switch.sh  micro-benchmarks.sh  realworld-cves.sh  resource-utilization.sh  run_measurement.sh  scalability.sh  security.sh
example_rtos_integration/: README.md
example_rtos_integration/freertos/: README.md  tasks.c
example_rtos_integration/zephyr/: README.md  init.c  swap.c  thread.c  thread.h
experiments/case_study/: README.md  derive_overhead_framework.py  hp_config.h  logger.py  plot.py  run.sh
experiments/performance/: README.md
experiments/realworld_cves/: README.md  run.sh  run_cve.sh  verify.sh
experiments/realworld_cves/zephyr/cve_2020_10021/: CMakeLists.txt  hotpatch.c  prj.conf
experiments/realworld_cves/zephyr/cve_2020_10021/include/: hp_code_data.h  hp_config.h
experiments/realworld_cves/zephyr/cve_2020_10021/src/: main.c
experiments/realworld_cves/zephyr/cve_2020_10023/: CMakeLists.txt  hotpatch.c  prj.conf
experiments/realworld_cves/zephyr/cve_2020_10023/include/: hp_code_data.h  hp_config.h
experiments/realworld_cves/zephyr/cve_2020_10023/src/: main.c
experiments/realworld_cves/zephyr/cve_2020_10024/: CMakeLists.txt  Kconfig  hotpatch.c  prj.conf
experiments/realworld_cves/zephyr/cve_2020_10024/include/: hp_code_data.h  hp_data.h
experiments/realworld_cves/zephyr/cve_2020_10024/src/: main.c
experiments/realworld_cves/zephyr/cve_2020_10062/: CMakeLists.txt  hotpatch.c  prj.conf
experiments/realworld_cves/zephyr/cve_2020_10062/include/: hp_code_data.h
experiments/realworld_cves/zephyr/cve_2020_10062/src/: main.c
experiments/realworld_cves/zephyr/cve_2020_10063/: CMakeLists.txt  hotpatch.c  prj.conf
experiments/realworld_cves/zephyr/cve_2020_10063/include/: hp_code_data.h
experiments/realworld_cves/zephyr/cve_2020_10063/src/: main.c
experiments/security/: README.md  run.sh  verify.sh
hotpatch_generator/: README.md  hotpatch_generator.py
hotpatch_generator/common/: binaryfile.py  generator.py  hotpatchfile.py
hotpatches/: hp_code_data_template.h
hotpatches/crazyflie/: crazyflie.c
hotpatches/freertos/: cve_2017_2784.c  cve_2018_16524.c  cve_2018_16528.c  cve_2018_16603.c  cve_2020_17443.c  cve_2020_17445.c  cve_2021_31572.c  sample.c
hotpatches/include/: hp_helper.h
hotpatches/zephyr/: cve_2020_10021.c  cve_2020_10023.c  cve_2020_10024.c  (+3 more)
kintsugi/: CMakeLists.txt  Kconfig  Makefile  MakefileCrazyFlie  hp_layout_freertos.ld  hp_layout_zephyr.ld
(+968 files in other folders)
